Check if path prefix is null rather than using separate boolean. Update help.

--- a/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-pathPrefix.html
+++ b/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-pathPrefix.html
@@ -1,5 +1,5 @@
 <div>
   <p>
-    The specified prefix will be stripped from all uploaded filenames.
+    The specified prefix will be stripped from all uploaded filenames. Filenames that do not start with this prefix will not be modified.
   </p>
 </div>
