--- a/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-showInline.html
+++ b/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-showInline.html
@@ -1,7 +1,7 @@
 <div>
   <p>This options controls the "Content-Disposition" HTTP header:</p>
   <ul>
-    <li>When this box is checked, all files will be set with "Content-Disposition: inline" to be displayed in the browser.</li>
-    <li>When this box is unchecked, all files will be set with "Content-Disposition: attachment" which will trigger a file download by the browser.</li>
+    <li>When this box is checked, file metadata will be configured with "Content-Disposition: inline" indicating it can be displayed inside a Web page, or as a Web page.</li>
+    <li>When this box is left unchecked, file metadata will be configured with "Content-Disposition: attachment" indicating it should be downloaded.</li>
   </ul>
 </div>
