--- a/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-showInline.html
+++ b/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-showInline.html
@@ -1,5 +1,5 @@
 <div>
-  <p>This options controls the "Content-Disposition" HTTP header:</p>
+  <p>This option controls the "Content-Disposition" HTTP header:</p>
   <ul>
     <li>When this box is checked, file metadata will be configured with "Content-Disposition: inline" indicating it can be displayed inside a Web page, or as a Web page.</li>
     <li>When this box is left unchecked, file metadata will be configured with "Content-Disposition: attachment" indicating it should be downloaded.</li>
