Introducing Download Step, both as a Build step and Pipeline.

--- a/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-pathPrefix.html
+++ b/src/main/resources/com/google/jenkins/plugins/storage/AbstractUpload/help-pathPrefix.html
@@ -1,5 +1,5 @@
 <div>
   <p>
-    The specified prefix will be stripped from all uploaded filenames. Filenames that do not start with this prefix will not be modified. If this prefix does not have a trailing slash, it will be added automatically.
+    The specified prefix will be stripped from all downloaded filenames. Filenames that do not start with this prefix will not be modified. If this prefix does not have a trailing slash, it will be added automatically.
   </p>
 </div>
