--- a/src/main/resources/com/google/jenkins/plugins/storage/DownloadStep/help-pathPrefix.html
+++ b/src/main/resources/com/google/jenkins/plugins/storage/DownloadStep/help-pathPrefix.html
@@ -1,6 +1,5 @@
 <div>
   <p>
-    When this box is checked, downloaded file names will not contain the local
-    path prefix.
+    The specified prefix will be stripped from all downloaded filenames. Filenames that do not start with this prefix will not be modified. If this prefix does not have a trailing slash, it will be added automatically.
   </p>
 </div>
